[gd_scene load_steps=30 format=3 uid="uid://iww63bcg0wbq"]

[ext_resource type="Script" path="res://legacy/scripts/customer.gd" id="1_pv177"]
[ext_resource type="Script" path="res://scripts/resources/customer_data.gd" id="2_pj0p4"]
[ext_resource type="Texture2D" uid="uid://bwo1enksh1fyf" path="res://legacy/art/done_ordering_marker.png" id="6_eyyx4"]
[ext_resource type="PackedScene" uid="uid://b4dbpk1ujffv3" path="res://scenes/interactable_component.tscn" id="7_4m0lg"]
[ext_resource type="Texture2D" uid="uid://dfdo0hgfhgfss" path="res://legacy/art/current_indicator.png" id="8_t820p"]
[ext_resource type="PackedScene" uid="uid://be647421rchf7" path="res://legacy/scenes/interactareacomponent.tscn" id="8_vx0h1"]
[ext_resource type="Texture2D" uid="uid://dd71tcflp5tn2" path="res://legacy/art/progressbartextures/health.png" id="9_2uwyd"]
[ext_resource type="Texture2D" uid="uid://d3be6t4i2837u" path="res://legacy/art/progressbartextures/health_out.png" id="10_krmgk"]

[sub_resource type="Resource" id="Resource_pwjl8"]
script = ExtResource("2_pj0p4")
patience_multplier = 0.15

[sub_resource type="Animation" id="Animation_a3jtl"]
resource_name = "Arm Wave"
length = 0.6
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_nqlq0"]
resource_name = "Idle Back"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_mcn8n"]
resource_name = "Idle Front"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_fpico"]
resource_name = "Idle Side"
length = 0.8
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_cq5qm"]
resource_name = "Ordering"
length = 0.2
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_gefor"]
length = 0.001

[sub_resource type="Animation" id="Animation_iavnu"]
resource_name = "Sit"
length = 0.2
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_thdwy"]
resource_name = "Talk"
length = 0.4
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_46l4o"]
resource_name = "Walk Back"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_4brcd"]
resource_name = "Walk Front"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_71pq7"]
resource_name = "Walk Side"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vh35p"]
_data = {
"Arm Wave": SubResource("Animation_a3jtl"),
"Idle Back": SubResource("Animation_nqlq0"),
"Idle Front": SubResource("Animation_mcn8n"),
"Idle Side": SubResource("Animation_fpico"),
"Ordering": SubResource("Animation_cq5qm"),
"RESET": SubResource("Animation_gefor"),
"Sit": SubResource("Animation_iavnu"),
"Talk": SubResource("Animation_thdwy"),
"Walk Back": SubResource("Animation_46l4o"),
"Walk Front": SubResource("Animation_4brcd"),
"Walk Side": SubResource("Animation_71pq7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xocqr"]
size = Vector2(16, 24)

[sub_resource type="Animation" id="Animation_hccfv"]
length = 0.001

[sub_resource type="Animation" id="Animation_2d7c4"]
resource_name = "selected"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mvtx2"]
_data = {
"RESET": SubResource("Animation_hccfv"),
"selected": SubResource("Animation_2d7c4")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ifss0"]
atlas = ExtResource("8_t820p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uf5m"]
atlas = ExtResource("8_t820p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_akg4f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifss0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uf5m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dxd45"]
radius = 25.02

[node name="Customer" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_pv177")
data = SubResource("Resource_pwjl8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vh35p")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
radius = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_xocqr")

[node name="Order Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Order Marker" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -46)
texture = ExtResource("6_eyyx4")

[node name="Talk Timer" type="Timer" parent="."]
one_shot = true

[node name="Highlight" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mvtx2")
}

[node name="indicator" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -33)
sprite_frames = SubResource("SpriteFrames_akg4f")
autoplay = "default"
frame_progress = 0.791279

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -68.0
offset_right = 20.0
offset_bottom = -45.0

[node name="ProgressBar" type="TextureProgressBar" parent="."]
texture_filter = 1
offset_left = 9.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = -11.0
rotation = -1.5708
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("9_2uwyd")
texture_over = ExtResource("10_krmgk")
texture_progress = ExtResource("9_2uwyd")
tint_progress = Color(1, 1, 0, 1)

[node name="Ordered Food" type="Sprite2D" parent="."]
position = Vector2(0, -34)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -17)
scale = Vector2(0.5, 0.9)

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(0.533334, 0)
scale = Vector2(1.06667, 1.08333)
color = Color(1, 1, 0, 1)
polygon = PackedVector2Array(-8, -24, 7, -24, 7, 0, -8, 0)

[node name="InteractableComponent" parent="." node_paths=PackedStringArray("interact_area") instance=ExtResource("7_4m0lg")]
interact_area = NodePath("../InteractAreaComponent")

[node name="InteractAreaComponent" parent="." instance=ExtResource("8_vx0h1")]
position = Vector2(0, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractAreaComponent"]
shape = SubResource("CircleShape2D_dxd45")

[connection signal="timeout" from="Order Timer" to="." method="_on_order_timer_timeout"]
[connection signal="timeout" from="Talk Timer" to="." method="_on_talk_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
